<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.froositadwi.justjava.MainActivity"
        android:layout_margin="16dp"
        >
        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/nameValue"
            />

        <TextView
            android:id="@+id/qtyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qty"
            android:textAllCaps="true"
            android:textSize="16dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/minusButton"
                android:layout_width="34dp"
                android:layout_height="wrap_content"
                android:text="-"
                />

            <TextView
                android:id="@+id/qtyValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultValue"
                android:textAllCaps="true"
                android:textSize="16dp"
                android:textColor="@android:color/black"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />


            <Button
                android:id="@+id/plusButton"
                android:layout_width="34dp"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="+"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/topping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/chocoSyrupTopping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toppingChocoSyrup" />
            <CheckBox
                android:id="@+id/creamTopping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toppingCream"/>
            <CheckBox
                android:id="@+id/cherryTopping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toppingCherry"/>

        </LinearLayout>

        <Button
            android:id="@+id/orderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            />
        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priceTextView"
            android:textAllCaps="true"
            android:textSize="16dp"
            android:textColor="@android:color/black"
            />
        <TextView
            android:id="@+id/priceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultPriceValue"
            android:textAllCaps="true"
            android:textSize="16dp"
            android:textColor="@android:color/black"
            />
        <TextView
            android:id="@+id/orderSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAllCaps="true"
            android:textSize="16dp"
            android:textColor="@android:color/black"
            />



    </LinearLayout>


</ScrollView>